--- a/mypy.ini
+++ b/mypy.ini
@@ -5,7 +5,7 @@ warn_unused_configs = True
 ignore_missing_imports = True
 
 # SQLAlchemy plugin — resolves all Column[T] vs T false positives.
-# Requires: pip install sqlalchemy2-stubs
+# REMOVE OR UPDATE THIS COMMENT: Requires: pip install sqlalchemy2-stubs
 plugins = sqlalchemy.ext.mypy.plugin
 
 # Per-module overrides for known stubs gaps
